fix: Bold tag alignment fix

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -56,7 +56,7 @@
     padding: 5px;
     margin: 0 4px;
     color: $white;
-    line-height: 17px;
+    line-height: 13px;
     cursor: pointer;
     opacity: 0.4;
   }
@@ -66,7 +66,7 @@
     padding: 5px;
     margin: 0 4px;
     color: $white;
-    line-height: 17px;
+    line-height: 13px;
     cursor: pointer;
     opacity: 1;
   }
